# miscompilation-runner

./: .gitignore  README.md  common.py  example  example.ll  example.s  llvmlite-demo.py  main.py  oracle.py  out  out.s  rename_miscomp_tests_files.py  temp.py  test2  test2.s
crc/: compile_crc.sh  crc_template.ll  csmith_crc_minimal.c  test
examples/: P1.ll  P1_modified_crc.ll  P1_prime.ll  P1_prime_modified_crc.ll  P2.ll  P2_modified_crc.ll  P2_prime.ll  P2_prime_modified_crc.ll  P3.ll  P3_modified_crc.ll  P3_prime.ll  P3_prime_modified_crc.ll  P4.c  P4.ll  P4_modified_crc.ll  P4_prime.ll  P4_prime_modified_crc.ll  P5.ll  P5_modified_crc.ll  P5_prime.ll  P5_prime_modified_crc.ll  P6.ll  P6_modified_crc.ll  P6_prime.ll  P6_prime_modified_crc.ll  P7.ll  P7_modified_crc.ll  P7_prime.ll  P7_prime_modified_crc.ll  P8.ll  P8_modified_crc.ll  P8_prime.ll  P8_prime_modified_crc.ll  P9.ll  P9_modified_crc.ll  P9_prime.ll  P9_prime_modified_crc.ll  abort_exit_modified_crc.ll  global_vars.ll  notes.md
examples/P1/: P.ll
examples/P2/: P_prime.ll
examples/P3/: P.ll  P.s
examples/P6/: P.ll  P_prime.ll
llvm_c/: CMakeLists.txt  GlobalSizePass.cpp
miscomp_tests_renamed/: 1000_O0.ll  1000_O0_opt.ll  1000_O1.ll  1000_O1_opt.ll  1001_O0.ll  1001_O0_opt.ll  1001_O1_opt.ll  1002_O1.ll  1003_O0.ll  1003_O1.ll  1003_O1_opt.ll  1004_O0_opt.ll  1004_O1.ll  1004_O1_opt.ll  1006_O0.ll  1006_O0_opt.ll  1006_O1_opt.ll  1007_O0.ll  1007_O1_opt.ll  1008_O0.ll  1008_O0_opt.ll  1008_O1_opt.ll  1009_O0_opt.ll  1009_O1.ll  1009_O1_opt.ll  100_O1.ll  100_O1_opt.ll  1010_O0.ll  1010_O1.ll  1010_O1_opt.ll  1011_O0.ll  1011_O0_opt.ll  1011_O1.ll  1012_O0.ll  1012_O0_opt.ll  1012_O1.ll  1013_O0.ll  1013_O0_opt.ll  1013_O1.ll  1013_O1_opt.ll  (+15773 more)
miscomp_tests_renamed_filtered/: 1014_O0.ll  1022_O0.ll  1022_O0_opt.ll  1023_O0_opt.ll  1030_O0.ll  1031_O0_opt.ll  1034_O0.ll  1037_O0_opt.ll  1074_O0.ll  1083_O0.ll  1097_O0_opt.ll  1106_O0.ll  1106_O0_opt.ll  112_O0_opt.ll  1135_O0.ll  1137_O0.ll  1141_O0.ll  1145_O0.ll  1145_O0_opt.ll  1148_O0.ll  1148_O0_opt.ll  1154_O0_opt.ll  1160_O0.ll  1185_O0.ll  1185_O0_opt.ll  1196_O0_opt.ll  1204_O0.ll  1208_O0_opt.ll  1233_O0_opt.ll  1236_O0.ll  1236_O0_opt.ll  1265_O0.ll  1285_O0.ll  1286_O0.ll  1289_O0.ll  1297_O0_opt.ll  1307_O0.ll  1318_O0_opt.ll  1327_O0_opt.ll  1342_O0.ll  (+418 more)
miscomp_tests_runner/: alive2_correct.txt  crc_compile_crash.txt  crc_crashed.txt  crc_executed.txt  crc_inject_failed.txt  crc_injection_failure.txt  crc_logic_failed.txt  crc_no_globals_found.txt  crc_no_hash_found.txt  crc_succeeded.txt  failed.txt  full_run_stats.txt  parse_return_codes.py  regular_compile_crash.txt  regular_crashed.txt  regular_different_output.txt  regular_executed.txt  regular_same_output.txt  regular_undeterminable_output.txt  runner.py  runner_input.txt  saved_stats.txt  stats.txt  succeeded.txt  timed_out.txt
miscomp_tests_runner/finished_stats/: alive2_error.txt  alive2_no_prove.txt  crc_compile_crash.txt  crc_executed.txt  crc_undefined_execution.txt  regular_execution_crash.txt  stats.txt  timeout.txt  (+2 more)
oracle/: common.py  oracle.py
oracles/: alive2.py  crc.py  crc_templates.py  regular.py
results/: results.csv
scripts/: parse_predictor_stdout.sh  rename_miscomp_tests_files.py  run_miscomp_predictor.sh  sanitizer_failures.txt  sanitizer_tests.py  t.c
test3/: test3  test3_fail  test3_fail.c  test3_fail.ll  test3_fail.s  test3_pass  test3_pass.c  test3_pass.ll  test3_pass.s
tests/: abort_exit.ll  notes.md
(+43 files in other folders)
